--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "author": "Elastos Trinity Team",
   "license": "Apache-2.0",
+  "build": {
+    "appId": "org.elastos.trinity.runtime",
+    "electronVersion": "4.0.0",
+    "mac": {
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false
+    }
+  },
   "dependencies": {
-    "appmanager": "file:./plugin_src/AppManager",
-    "titlebarmanager": "file:./plugin_src/TitleBarManager",
-    "didsessionmanager": "file:./plugin_src/DIDSessionManager",
-    "passwordmanager": "file:./plugin_src/PasswordManager",
-    "notificationmanager": "file:./plugin_src/NotificationManager",
-    "contactnotifier": "file:./plugin_src/ContactNotifier",
+    "appmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/AppManager",
+    "contactnotifier": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/ContactNotifier",
     "cordova-android": "8.1.0",
     "cordova-clipboard": "1.2.1",
+    "cordova-electron": "^2.0.0-nightly.2020.6.17.cc03aff0",
     "cordova-ios": "5.1.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-battery-status": "^2.0.3",
@@ -37,21 +42,25 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "did": "file:../Plugins/DID",
+    "did": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/DID",
+    "didsessionmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/DIDSessionManager",
     "diff": "^3.5.0",
-    "elastos-trinity-plugins-carrier": "file:../Plugins/Carrier",
-    "elastos-trinity-plugins-fingerprint": "file:../Plugins/Fingerprint",
-    "elastos-trinity-plugins-hive": "file:../Plugins/Hive",
-    "elastos-trinity-plugins-ionicwebview": "file:../Plugins/IonicWebView",
-    "elastos-trinity-plugins-media": "file:../Plugins/Media",
-    "elastos-trinity-plugins-qrscanner": "file:../Plugins/QRScanner",
+    "elastos-trinity-plugins-carrier": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Carrier",
+    "elastos-trinity-plugins-fingerprint": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Fingerprint",
+    "elastos-trinity-plugins-hive": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Hive",
+    "elastos-trinity-plugins-ionicwebview": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/IonicWebView",
+    "elastos-trinity-plugins-media": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Media",
+    "elastos-trinity-plugins-qrscanner": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/QRScanner",
     "es6-promise-plugin": "^4.2.2",
     "fs": "0.0.1-security",
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-wget-promise": "^0.1.6",
+    "notificationmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/NotificationManager",
+    "passwordmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/PasswordManager",
     "path": "^0.12.7",
-    "wallet": "file:../Plugins/Wallet",
+    "titlebarmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/TitleBarManager",
+    "wallet": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Wallet",
     "xcode": "^1.1.0",
     "yauzl": "^2.10.0"
   },
@@ -88,9 +97,6 @@
       "elastos-trinity-plugins-hive": {},
       "elastos-trinity-plugins-wallet": {},
       "elastos-trinity-plugins-did": {},
-      "elastos-trinity-plugins-appmanager": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
       "elastos-trinity-plugins-fingerprint": {
         "FACEID_USAGE_DESCRIPTION": " "
       },
@@ -102,7 +108,15 @@
     },
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "electron"
     ]
+  },
+  "devDependencies": {
+    "electron-builder": "^22.7.0",
+    "expose-loader": "^0.7.5",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0"
   }
 }
