--- a/plugin_src/AppManager/plugin.xml
+++ b/plugin_src/AppManager/plugin.xml
@@ -112,7 +112,7 @@
         <js-module src="src/electron/AppManagerPluginProxy.js" name="AppManagerPluginProxy">
             <runs />
         </js-module>
-        <source-file src="src/electron/AppManagerPluginIsolated.js" target-dir="toto"></source-file>
-        <js-module src="src/electron/AppManagerPluginMain.js"></js-module>
+
+        <hook type="after_plugin_add" src="hooks/electron/after_plugin_add.js" />
     </platform>
 </plugin>
