--- a/platform_src/electron/main/package.json
+++ b/platform_src/electron/main/package.json
@@ -14,6 +14,8 @@
     "electron-rebuild": "^1.11.0"
   },
   "dependencies": {
+    "sql.js": "^1.3.0",
+    "sqlite3": "^4.2.0",
     "typeorm": "^0.2.25"
   }
 }
