--- a/platform_src/electron/main/tsconfig.json
+++ b/platform_src/electron/main/tsconfig.json
@@ -8,7 +8,7 @@
       "experimentalDecorators": true,
       "importHelpers": true,
       "target": "es5",
-      "outDir": "../../../platforms/electron/www",
+      "outDir": "../../../platforms/electron/platform_www",
       "allowJs": true,
       "lib": [
         "ES2018",
@@ -23,7 +23,7 @@
       }
     },
     "include": [
-      "./**/*"
+      "./**/*.ts"
     ],
     "exclude": [
       "node_modules",
