add intentwhitelist on android

--- a/www_files/config/config.json
+++ b/www_files/config/config.json
@@ -17,6 +17,10 @@
         "org.elastos.trinity.dapp.settings",
         "org.elastos.trinity.dapp.dappstore"
     ],
+    "intent.authority.whitelist": [
+        "org.elastos.trinity.dapp.settings",
+        "org.elastos.trinity.dapp.did"
+    ],
     "whitelist.urls": [
         "https://sentry.io/*"
     ],
