build process for development

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     }
   },
   "dependencies": {
-    "appmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/AppManager",
-    "contactnotifier": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/ContactNotifier",
-    "cordova-android": "8.1.0",
+    "appmanager": "file:./plugin_src/AppManager",
+	"titlebarmanager": "file:./plugin_src/TitleBarManager",
+	"didsessionmanager": "file:./plugin_src/DIDSessionManager",
+	"passwordmanager": "file:./plugin_src/PasswordManager",
+	"notificationmanager": "file:./plugin_src/NotificationManager",
+    "contactnotifier": "file:./plugin_src/ContactNotifier",
     "cordova-clipboard": "1.2.1",
     "cordova-electron": "^2.0.0-nightly.2020.6.17.cc03aff0",
-    "cordova-ios": "5.1.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-camera": "^4.1.0",
@@ -42,26 +44,20 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "did": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/DID",
-    "didsessionmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/DIDSessionManager",
+    "did": "file:../Plugins/DID",
     "diff": "^3.5.0",
-    "elastos-trinity-plugins-carrier": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Carrier",
-    "elastos-trinity-plugins-fingerprint": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Fingerprint",
-    "elastos-trinity-plugins-hive": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Hive",
-    "elastos-trinity-plugins-ionicwebview": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/IonicWebView",
-    "elastos-trinity-plugins-media": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Media",
-    "elastos-trinity-plugins-qrscanner": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/QRScanner",
+    "elastos-trinity-plugins-fingerprint": "file:../Plugins/Fingerprint",
+    "elastos-trinity-plugins-ionicwebview": "file:../Plugins/IonicWebView",
+    "elastos-trinity-plugins-media": "file:../Plugins/Media",
     "es6-promise-plugin": "^4.2.2",
     "fs": "0.0.1-security",
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-wget-promise": "^0.1.6",
-    "notificationmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/NotificationManager",
-    "passwordmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/PasswordManager",
     "path": "^0.12.7",
     "sqlite3": "^4.2.0",
-    "titlebarmanager": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Runtime/plugin_src/TitleBarManager",
-    "wallet": "file:/Users/bpiette/Documents/Perso/Dev/elastos/Githubs/Elastos.Trinity/Plugins/Wallet",
+	"typeorm": "^0.2.25",
+    "wallet": "file:../Plugins/Wallet",
     "xcode": "^1.1.0",
     "yauzl": "^2.10.0"
   },
@@ -86,7 +82,6 @@
       "cordova-plugin-device-motion": {},
       "cordova-plugin-flashlight": {},
       "cordova-plugin-inappbrowser": {},
-      "elastos-trinity-plugins-qrscanner": {},
       "cordova-plugin-media-capture": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-geolocation": {},
@@ -94,10 +89,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-vibration": {},
-      "elastos-trinity-plugins-carrier": {},
-      "elastos-trinity-plugins-hive": {},
       "elastos-trinity-plugins-wallet": {},
       "elastos-trinity-plugins-did": {},
+	  "elastos-trinity-plugins-appmanager": {},
       "elastos-trinity-plugins-fingerprint": {
         "FACEID_USAGE_DESCRIPTION": " "
       },
@@ -107,11 +101,7 @@
       "elastos-trinity-plugins-notificationmanager": {},
       "elastos-trinity-plugins-contactnotifier": {}
     },
-    "platforms": [
-      "android",
-      "ios",
-      "electron"
-    ]
+    "platforms": []
   },
   "devDependencies": {
     "electron-builder": "^22.7.0",
