--- a/package.json
+++ b/package.json
@@ -19,13 +19,9 @@
   },
   "dependencies": {
     "appmanager": "file:./plugin_src/AppManager",
-	"titlebarmanager": "file:./plugin_src/TitleBarManager",
-	"didsessionmanager": "file:./plugin_src/DIDSessionManager",
-	"passwordmanager": "file:./plugin_src/PasswordManager",
-	"notificationmanager": "file:./plugin_src/NotificationManager",
     "contactnotifier": "file:./plugin_src/ContactNotifier",
     "cordova-clipboard": "1.2.1",
-    "cordova-electron": "^2.0.0-nightly.2020.6.17.cc03aff0",
+    "cordova-electron": "^2.0.0-nightly.2020.7.18.d6fbdb83",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-camera": "^4.1.0",
@@ -45,18 +41,26 @@
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "did": "file:../Plugins/DID",
+    "didsessionmanager": "file:./plugin_src/DIDSessionManager",
     "diff": "^3.5.0",
+    "elastos-trinity-plugins-carrier": "file:../Plugins/Carrier",
     "elastos-trinity-plugins-fingerprint": "file:../Plugins/Fingerprint",
+    "elastos-trinity-plugins-hive": "file:../Plugins/Hive",
     "elastos-trinity-plugins-ionicwebview": "file:../Plugins/IonicWebView",
     "elastos-trinity-plugins-media": "file:../Plugins/Media",
+    "elastos-trinity-plugins-qrscanner": "file:../Plugins/QRScanner",
     "es6-promise-plugin": "^4.2.2",
     "fs": "0.0.1-security",
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-wget-promise": "^0.1.6",
+    "notificationmanager": "file:./plugin_src/NotificationManager",
+    "passwordmanager": "file:./plugin_src/PasswordManager",
     "path": "^0.12.7",
+	"sql.js": "^1.3.0",
     "sqlite3": "^4.2.0",
-	"typeorm": "^0.2.25",
+    "typeorm": "^0.2.25",
+    "titlebarmanager": "file:./plugin_src/TitleBarManager",
     "wallet": "file:../Plugins/Wallet",
     "xcode": "^1.1.0",
     "yauzl": "^2.10.0"
@@ -82,6 +86,7 @@
       "cordova-plugin-device-motion": {},
       "cordova-plugin-flashlight": {},
       "cordova-plugin-inappbrowser": {},
+      "elastos-trinity-plugins-qrscanner": {},
       "cordova-plugin-media-capture": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-geolocation": {},
@@ -89,19 +94,24 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-vibration": {},
+      "elastos-trinity-plugins-carrier": {},
+      "elastos-trinity-plugins-hive": {},
       "elastos-trinity-plugins-wallet": {},
       "elastos-trinity-plugins-did": {},
-	  "elastos-trinity-plugins-appmanager": {},
       "elastos-trinity-plugins-fingerprint": {
         "FACEID_USAGE_DESCRIPTION": " "
       },
+	  "elastos-trinity-plugins-appmanager": {},
       "elastos-trinity-plugins-titlebarmanager": {},
       "elastos-trinity-plugins-didsessionmanager": {},
       "elastos-trinity-plugins-passwordmanager": {},
       "elastos-trinity-plugins-notificationmanager": {},
-      "elastos-trinity-plugins-contactnotifier": {}
+      "elastos-trinity-plugins-contactnotifier": {},
+	  "elastos-trinity-plugins-appmanager": {}
     },
-    "platforms": []
+    "platforms": [
+      "electron"
+    ]
   },
   "devDependencies": {
     "electron-builder": "^22.7.0",
