--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     }
   },
   "dependencies": {
-    "appmanager": "file:./plugin_src/AppManager",
-    "contactnotifier": "file:./plugin_src/ContactNotifier",
+    "appmanager": "file:plugin_src/AppManager",
+    "contactnotifier": "file:plugin_src/ContactNotifier",
     "cordova-clipboard": "1.2.1",
     "cordova-electron": "^2.0.0-nightly.2020.7.18.d6fbdb83",
     "cordova-plugin-add-swift-support": "^2.0.2",
@@ -29,6 +29,7 @@
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-file": "file:../Plugins/File",
+    "cordova-plugin-fingerprint-aio": "file:../Plugins/Fingerprint",
     "cordova-plugin-flashlight": "^3.2.0",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-inappbrowser": "^3.1.0",
@@ -41,7 +42,7 @@
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "did": "file:../Plugins/DID",
-    "didsessionmanager": "file:./plugin_src/DIDSessionManager",
+    "didsessionmanager": "file:plugin_src/DIDSessionManager",
     "diff": "^3.5.0",
     "elastos-trinity-plugins-carrier": "file:../Plugins/Carrier",
     "elastos-trinity-plugins-fingerprint": "file:../Plugins/Fingerprint",
@@ -51,16 +52,17 @@
     "elastos-trinity-plugins-qrscanner": "file:../Plugins/QRScanner",
     "es6-promise-plugin": "^4.2.2",
     "fs": "0.0.1-security",
+    "hive": "file:../Plugins/Hive",
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-wget-promise": "^0.1.6",
-    "notificationmanager": "file:./plugin_src/NotificationManager",
-    "passwordmanager": "file:./plugin_src/PasswordManager",
+    "notificationmanager": "file:plugin_src/NotificationManager",
+    "passwordmanager": "file:plugin_src/PasswordManager",
     "path": "^0.12.7",
-	"sql.js": "^1.3.0",
+    "sql.js": "^1.3.0",
     "sqlite3": "^4.2.0",
+    "titlebarmanager": "file:plugin_src/TitleBarManager",
     "typeorm": "^0.2.25",
-    "titlebarmanager": "file:./plugin_src/TitleBarManager",
     "wallet": "file:../Plugins/Wallet",
     "xcode": "^1.1.0",
     "yauzl": "^2.10.0"
@@ -101,13 +103,12 @@
       "elastos-trinity-plugins-fingerprint": {
         "FACEID_USAGE_DESCRIPTION": " "
       },
-	  "elastos-trinity-plugins-appmanager": {},
+      "elastos-trinity-plugins-appmanager": {},
       "elastos-trinity-plugins-titlebarmanager": {},
       "elastos-trinity-plugins-didsessionmanager": {},
       "elastos-trinity-plugins-passwordmanager": {},
       "elastos-trinity-plugins-notificationmanager": {},
-      "elastos-trinity-plugins-contactnotifier": {},
-	  "elastos-trinity-plugins-appmanager": {}
+      "elastos-trinity-plugins-contactnotifier": {}
     },
     "platforms": [
       "electron"
