Re-adding appmanager permissions to the dappstore dapp as it's not built-in on android again

--- a/www_files/config/permission/app.json
+++ b/www_files/config/permission/app.json
@@ -4,5 +4,6 @@
     "org.elastos.trinity.dapp.settings": "settings",
     "org.elastos.trinity.dapp.did": "did",
     "org.elastos.trinity.dapp.didsession": "didsession",
-    "org.elastos.trinity.dapp.passwordmanager": "passwordmanager"
+    "org.elastos.trinity.dapp.passwordmanager": "passwordmanager",
+    "org.elastos.trinity.dapp.dappstore": "dappstore"
 }
