Return the signed JWT in intent responses when needed + whitelist urls for wallet

--- a/www_files/config/config.json
+++ b/www_files/config/config.json
@@ -14,6 +14,7 @@
         "org.elastos.trinity.dapp.qrcodescanner"
     ],
     "url.authority.whitelist": [
+        "org.elastos.trinity.dapp.wallet",
         "org.elastos.trinity.dapp.settings",
         "org.elastos.trinity.dapp.dappstore"
     ],
