CU-4fv2r1 WIP - Now able to sign in with credaccess from native app, and get response - dirty hacks inside

--- a/www_files/config/config.json
+++ b/www_files/config/config.json
@@ -31,5 +31,10 @@
         "org.elastos.trinity.dapp.wallet": "WalletMainViewController"
     },
     "build.type": "elastOS",
-    "build.variant": ""
+    "build.variant": "",
+    "native.startup.dapppackage": "",
+    "native.scheme": {
+        "scheme": "https",
+        "path": "elastos.trinity-tech.io"
+    }
 }
