--- a/package.json
+++ b/package.json
@@ -20,10 +20,6 @@
   },
   "dependencies": {
     "appmanager": "file:./plugin_src/AppManager",
-    "titlebarmanager": "file:./plugin_src/TitleBarManager",
-    "didsessionmanager": "file:./plugin_src/DIDSessionManager",
-    "passwordmanager": "file:./plugin_src/PasswordManager",
-    "notificationmanager": "file:./plugin_src/NotificationManager",
     "contactnotifier": "file:./plugin_src/ContactNotifier",
     "cordova-android": "8.1.0",
     "cordova-clipboard": "1.2.1",
@@ -45,8 +41,10 @@
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-vibration": "^3.1.1",
+    "cordova-plugin-video-editor": "^1.1.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "did": "file:../Plugins/DID",
+    "didsessionmanager": "file:./plugin_src/DIDSessionManager",
     "diff": "^3.5.0",
     "elastos-trinity-plugins-carrier": "file:../Plugins/Carrier",
     "elastos-trinity-plugins-fingerprint": "file:../Plugins/Fingerprint",
@@ -60,8 +58,11 @@
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-wget-promise": "^0.1.6",
+    "notificationmanager": "file:./plugin_src/NotificationManager",
+    "passwordmanager": "file:./plugin_src/PasswordManager",
     "path": "^0.12.7",
     "sql.js": "^1.3.0",
+    "titlebarmanager": "file:./plugin_src/TitleBarManager",
     "sqlite3": "^4.2.0",
     "typeorm": "^0.2.25",
     "wallet": "file:../Plugins/Wallet",
@@ -97,6 +98,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-vibration": {},
+      "cordova-plugin-video-editor": {},
       "elastos-trinity-plugins-carrier": {},
       "elastos-trinity-plugins-hive": {},
       "elastos-trinity-plugins-wallet": {},
