--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-vibration": "^3.1.1",
-    "cordova-plugin-video-editor": "^1.1.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "did": "file:../Plugins/DID",
     "didsessionmanager": "file:./plugin_src/DIDSessionManager",
@@ -124,6 +123,7 @@
   "devDependencies": {
     "electron-builder": "^22.7.0",
     "electron-rebuild": "^1.11.0",
+    "cordova-plugin-video-editor": "git+https://github.com/AlexMiniApps/cordova-plugin-video-editor.git",
     "expose-loader": "^0.7.5",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
