--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-video-editor": "file:../Plugins/VideoEditor",
     "did": "file:../Plugins/DID",
     "didsessionmanager": "file:./plugin_src/DIDSessionManager",
     "diff": "^3.5.0",
@@ -123,7 +124,6 @@
   "devDependencies": {
     "electron-builder": "^22.7.0",
     "electron-rebuild": "^1.11.0",
-    "cordova-plugin-video-editor": "git+https://github.com/AlexMiniApps/cordova-plugin-video-editor.git",
     "expose-loader": "^0.7.5",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
