--- a/plugin_src/AppManager/plugin.xml
+++ b/plugin_src/AppManager/plugin.xml
@@ -103,6 +103,7 @@
 		        <string>applinks:wallet.elastos.net</string>
                 <string>applinks:hive.elastos.net</string>
                 <string>applinks:contact.elastos.net</string>
+                <string>applinks:scanner.elastos.net</string>
             </array>
         </config-file>
         <config-file parent="com.apple.developer.associated-domains" target="*-Release.plist">
@@ -113,6 +114,7 @@
 		        <string>applinks:wallet.elastos.net</string>
                 <string>applinks:hive.elastos.net</string>
                 <string>applinks:contact.elastos.net</string>
+                <string>applinks:scanner.elastos.net</string>
             </array>
         </config-file>
 
