CU-5ftnpk use full domain in scanqrcode intent

--- a/www_files/config/config.json
+++ b/www_files/config/config.json
@@ -54,6 +54,8 @@
         "didtransaction": "https://wallet.elastos.net/didtransaction",
         "esctransaction": "https://wallet.elastos.net/esctransaction",
 
+        "scanqrcode": "https://scanner.elastos.net/scanqrcode",
+
         "setupvaultprompt": "https://hive.elastos.net/setupvaultprompt"
     }
 }
